--- a/index.html
+++ b/index.html
@@ -8,18 +8,42 @@
   </head>
   <body>
     <!-- Hero section -->
-    <section id="hero">
-      <div class="hero">
-        <div class="hero-info">
-          <h1 class="hero-info-heading">I Design <br />Your Dream</h1>
-          <p class="hero-info-sub-heading">I am a web developer</p>
-          <a href="#" type="button" class="hero-button"> Portfolio</a>
-        </div>
-        <div class="hero-img">
-          <img src="./images/img-1.jpg" alt="" />
-        </div>
+    <section id="hero" class="hero container">
+      <div class="hero-info">
+        <h1 class="hero-info-heading">I Design <br />Your Dream</h1>
+        <p class="hero-info-sub-heading">I am a web developer</p>
+        <a href="#" type="button" class="hero-button"> Portfolio</a>
+      </div>
+      <div class="hero-img">
+        <img src="./images/img-1.jpg" alt="img1" />
       </div>
     </section>
     <!-- end of Hero sectin -->
+
+    <!-- About section -->
+    <section id="about" class="about container">
+      ]
+      <div class="about-info">
+        <h1 class="about-info-heading">About Me</h1>
+        <p class="about-info-p">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id ante
+          blandit, lobortis est et, venenatis nulla. Integer vel odio vulputate,
+          porta nisl at, fringilla lorem. Mauris non est orci. Donec purus nunc,
+          lobortis volutpat felis in, malesuada sodales justo. Vivamus suscipit,
+          sem quis lacinia tempus, risus ipsum pharetra arcu, sit amet interdum
+          tellus est non neque. Maecenas gravida euismod felis. Aenean urna
+          lacus, faucibus sit amet euismod nec, placerat ut augue. Phasellus
+          eget nisi ac lacus volutpat varius sed et urna. Aliquam non mauris sed
+          augue consectetur auctor vitae vitae quam.
+        </p>
+        <a href="#" type="button" class="about-info-button">Download Resume</a>
+      </div>
+      <div class="about-img">
+        <div class="about-img-wrapper">
+          <img src="./images/img-2.jpg" alt="img2" />
+        </div>
+      </div>
+    </section>
+    <!-- End of about section -->
   </body>
 </html>
