Service section added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
+
+    <!-- font awesome -->
+    <script
+      src="https://kit.fontawesome.com/2751e903ec.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- end of font awesome -->
+
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -45,5 +53,78 @@
       </div>
     </section>
     <!-- End of about section -->
+
+    <!-- Service section -->
+    <section id="services" class="services container">
+      <div class="services-header">
+        <h1 class="services-header-heading">Services</h1>
+        <p class="services-header-p">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error
+          accusantium quidem, obcaecati nesciunt voluptatem possimus dolorum
+          vero ducimus quasi deleniti.
+        </p>
+      </div>
+      <div class="services-info">
+        <div class="service">
+          <div class="service-card">
+            <div class="service-front">
+              <i class="fa fa-palette"> </i>
+              <h1 class="service-front-heading">Web Design</h1>
+            </div>
+            <sdiv class="service-back">
+              <h1 class="service-back-heading">WEb Design</h1>
+              <p class="service-back-info">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure
+                at perspiciatis quam laboriosam tempora magnam earum porro
+                tempore repudiandae cumque pariatur, sed modi velit ex
+                dignissimos explicabo ab ad voluptatum dolorem! Voluptatum
+                repudiandae quibusdam libero dolorem nostrum sint deleniti
+                saepe?
+              </p>
+            </sdiv>
+          </div>
+        </div>
+        <div class="service">
+          <div class="service-card">
+            <div class="service-front">
+              <i class="fa fa-laptop"> </i>
+              <h1 class="service-front-heading">Front End Dev</h1>
+            </div>
+            <sdiv class="service-back">
+              <h1 class="service-back-heading">Front End Dev</h1>
+              <p class="service-back-info">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure
+                at perspiciatis quam laboriosam tempora magnam earum porro
+                tempore repudiandae cumque pariatur, sed modi velit ex
+                dignissimos explicabo ab ad voluptatum dolorem! Voluptatum
+                repudiandae quibusdam libero dolorem nostrum sint deleniti
+                saepe?
+              </p>
+            </sdiv>
+          </div>
+        </div>
+        <div class="service">
+          <div class="service-card">
+            <div class="service-front">
+              <i class="fa fa-building"> </i>
+              <h1 class="service-front-heading">Branding</h1>
+            </div>
+            <sdiv class="service-back">
+              <h1 class="service-back-heading">Branding</h1>
+              <p class="service-back-info">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure
+                at perspiciatis quam laboriosam tempora magnam earum porro
+                tempore repudiandae cumque pariatur, sed modi velit ex
+                dignissimos explicabo ab ad voluptatum dolorem! Voluptatum
+                repudiandae quibusdam libero dolorem nostrum sint deleniti
+                saepe?
+              </p>
+            </sdiv>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- End of service section -->
   </body>
 </html>
