Service sectin completed

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <h1 class="service-front-heading">Web Design</h1>
             </div>
             <sdiv class="service-back">
-              <h1 class="service-back-heading">WEb Design</h1>
+              <h1 class="service-back-heading">Web Design</h1>
               <p class="service-back-info">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure
                 at perspiciatis quam laboriosam tempora magnam earum porro
