hire me sectin complated

--- a/index.html
+++ b/index.html
@@ -124,7 +124,32 @@
         </div>
       </div>
     </section>
-
     <!-- End of service section -->
+
+    <!-- Hire section -->
+    <section id="hire" class="hire container">
+      <h1 class="hire-heading">Hire me to build your dream website</h1>
+      <a href="#" type="button" class="hire-button">Hire Me !!</a>
+    </section>
+    <!-- End  of Hire section -->
+
+    <!-- Footer section -->
+    <section id="footer" class="footer container">
+      <div class="footer-contact">
+        <h1 class="footer-contact-heading">Contact Me</h1>
+        <p class="footer-contact-info">Email: yourname@email.com</p>
+        <p class="footer-contact-info">Mobile: 234 456 6789</p>
+      </div>
+      <div class="social-medias">
+        <h1 class="social-medias-heading">Follow Me</h1>
+        <div class="social-media-icons">
+          <a href="#" class="fab fa-facebook-square"></a>
+          <a href="#" class="fab fa-instagram-square"></a>
+          <a href="#" class="fab fa-behance-square"></a>
+          <a href="#" class="fab fa-twitter-square"></a>
+        </div>
+      </div>
+    </section>
+    <!-- End of footer -->
   </body>
 </html>
