--- a/index.html
+++ b/index.html
@@ -15,6 +15,26 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Nav bar -->
+    <section id="navbar" class="container">
+      <div class="navbar">
+        <div class="brand">
+          <a href="#"><h1>Aswathy</h1></a>
+        </div>
+        <div class="nav-list">
+          <div class="hamburger">
+            <div class="bar"></div>
+          </div>
+          <ul>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#hire">Hire Me</a></li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <!-- End of Nav bar -->
+
     <!-- Hero section -->
     <section id="hero" class="hero container">
       <div class="hero-info">
@@ -39,10 +59,7 @@
           porta nisl at, fringilla lorem. Mauris non est orci. Donec purus nunc,
           lobortis volutpat felis in, malesuada sodales justo. Vivamus suscipit,
           sem quis lacinia tempus, risus ipsum pharetra arcu, sit amet interdum
-          tellus est non neque. Maecenas gravida euismod felis. Aenean urna
-          lacus, faucibus sit amet euismod nec, placerat ut augue. Phasellus
-          eget nisi ac lacus volutpat varius sed et urna. Aliquam non mauris sed
-          augue consectetur auctor vitae vitae quam.
+          tellus est non neque. Maecenas gravida euismod felis.
         </p>
         <a href="#" type="button" class="about-info-button">Download Resume</a>
       </div>
