--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section id="navbar" class="container">
       <div class="navbar">
         <div class="brand">
-          <a href="#"><h1>Aswathy</h1></a>
+          <a href="#hero"><h1>Aswathy</h1></a>
         </div>
         <div class="nav-list">
           <div class="hamburger">
