--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <div class="bar"></div>
           </div>
           <ul>
+            <li><a href="#about">About Me</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#about">About</a></li>
             <li><a href="#hire">Hire Me</a></li>
           </ul>
         </div>
